--- a/landingpage.html
+++ b/landingpage.html
@@ -5,19 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css"
-    <title>Document</title>
+    <title></title>
 </head>
 <body>
-    <div class="header">
-        <img src="./headerlogo.png" alt="Project Logo. Represents landing page name.">
-        <ul class="header-links">
-            <li><a href="./pages/headerpage1">Link 1</a>
-            </li>
-            <li><a href="./pages/headerpage2">Link 2</a>
-            </li>
-            <li><a href="./pages/headerpage3">Link 1</a>
-            </li>
-        </ul>
+   
+    <div class="content">
+        <div class="section1">
+            <div class="left-sidebar"></div>
+            <div class="section1-content">       
+                     <div class="header">
+                <img class="header-logo" src="./headerlogo.jpg" alt="Project Logo. Represents landing page name.">
+                <ul class="header-links">
+                    <li><a href="./pages/headerpage1">Link 1</a>
+                    </li>
+                    <li><a href="./pages/headerpage2">Link 2</a>
+                    </li>
+                    <li><a href="./pages/headerpage3">Link 3</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="right-sidebar"></div>
+        </div>
+        <div class="section2">
+            <div class="left-sidebar"></div>
+            <div class="right-sidebar"></div>
+        </div>
+        <div class="section3">
+            <div class="left-sidebar"></div>
+            <div class="left-sidebar"></div>
+        </div>
+        <div class="section4"></div>
+        <div class="left-sidebar"></div>
+        <div class="right-sidebar"></div>
+</div>
+    <div class="footer">
+
     </div>
 </body>
 </html>
