added styling to header links

--- a/landingpage.html
+++ b/landingpage.html
@@ -14,13 +14,13 @@
             <div class="left-sidebar"></div>
             <div class="section1-content">       
                      <div class="header">
-                <img class="header-logo" src="./headerlogo.jpg" alt="Project Logo. Represents landing page name.">
+                <img class="header-logo" src="./images/headerlogo.jpg" alt="Project Logo. Represents landing page name.">
                 <ul class="header-links">
-                    <li><a href="./pages/headerpage1">Link 1</a>
+                    <li><a href="./pages/headerpage1">Products</a>
                     </li>
-                    <li><a href="./pages/headerpage2">Link 2</a>
+                    <li><a href="./pages/headerpage2">About Us</a>
                     </li>
-                    <li><a href="./pages/headerpage3">Link 3</a>
+                    <li><a href="./pages/headerpage3">Our Team</a>
                     </li>
                 </ul>
             </div>
